1. การสร้าง Mesh Collider

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Space Shooter/Temp
+Space Shooter/Space Shooter/Library
+Space Shooter/Space Shooter/Temp
